# amr_trajectory

./: README.md
src/amr_trajectory_manager/: CMakeLists.txt  package.xml  readme.txt
src/amr_trajectory_manager/launch/: trajectory_logger.launch.py  trajectory_reader.launch.py
src/amr_trajectory_manager/src/: trajectory_follower.cpp  trajectory_publisher_saver.cpp  turtlebot3_autonomous.cpp
src/amr_trajectory_msgs/: CMakeLists.txt  package.xml
src/amr_trajectory_msgs/msg/: TrajectoryData.msg
